# wgpu-openxr-example

./: Cargo.toml  LICENSE  README.md
shaders/: blit.wgsl  blit_common.wgsl  blit_headset.wgsl
src/: blit.wgsl  blit_state.rs  camera.rs  main.rs  main.wgsl  main_state.rs  shader.wgsl  texture.rs  triangle.wgsl  types.rs  wgsl.rs  xr.rs
