[package]
authors = ["Philpax"]
edition = "2021"
name = "wgpu-openxr-example"
version = "0.1.0"

[dependencies]
anyhow = "1.0.65"
ash = {version = "0.37.0", optional = true}
bytemuck = { version = "1.12.1", features = ["derive"] }
futures = "0.3.24"
glam = "0.21.3"
openxr = {version = "0.17.0", features = ["linked", "static"], optional = true}
wgpu = "0.13.1"
wgpu-hal = {version = "0.13.1", optional = true}
winit = "0.27.3"

[features]
default = ["xr"]
xr = ["openxr", "ash", "wgpu-hal"]
