[package]
authors = ["Philpax"]
edition = "2021"
name = "wgpu-openxr-example"
version = "0.1.0"

[dependencies]
anyhow = "1.0.65"
ash = {version = "0.37.0", optional = true}
bytemuck = { version = "1.12.1", features = ["derive"] }
clap = { version = "4.0.8", features = ["derive"] }
futures = "0.3.24"
glam = "0.21.3"
log = "^0.4"
openxr = {version = "0.17.0", features = ["loaded", "linked", "static"], optional = true}
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-log = "0.1.3"
wgpu = "0.13.1"
wgpu-hal = {version = "0.13.1", optional = true}
winit = "0.27.3"

[features]
default = ["xr"]
xr = ["openxr", "ash", "wgpu-hal"]
